# benchmarks

./: .dockerignore  .gitignore  .prettierignore  .prettierrc.json  CLAUDE.md  Makefile  PLAN.md  README.md  biome.json  biome.jsonc  build.gradle.kts  docker-compose.grafana.yml  gradle.properties  justfile  knip.json  monorepo.code-workspace  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.gradle.kts
.husky/: pre-commit
assets/: lorem.txt
benchmark/: .golangci.json  config.json  config.jsonc  config.schema.json  config.yaml  go.mod  go.sum  results.json
benchmark/cmd/: main.go
benchmarks/: .golangci.json  go.mod  go.sum
benchmarks/cmd/: main.go
bun-elysia/: biome.json  package.json
bun-elysia/src/: app.ts  index.ts
bun-honojs/: .env.example  Dockerfile  package.json
bun-honojs/src/: app.ts  env.ts  index.ts
config/: bench.schema.json  calibration.json  config.json  config.schema.json
config/detekt/: detekt.yml
contract/: README.md  basic.json  db.json  file.json  form.json  params.json  web.json
contract/test-files/: text-with-late-nul.txt
deno-oak/: Dockerfile  deno.json
deno-oak/src/: app.ts  index.ts
docs/: calibration.md
docs/languages/: go.md  kotlin.md  python.md  rust.md  typescript.md  zig.md
fastapi/: main.py  pyproject.toml
fastapi/src/: main.py
go-chi/: .air.toml  .env.example  Dockerfile  go.mod
go-chi/app/: app.go
go-chi/cmd/: main.go
go-chi/params/: handlers.go
go-fiber/: .air.toml  .env.example  .golangci.json  Dockerfile  go.mod
go-fiber/app/: app.go
go-fiber/cmd/: main.go
go-gin/: .golangci.json  Dockerfile  go.mod
go-gin/cmd/: main.go
gradle/: libs.versions.toml
grafana/dashboards/: overview.json
honojs/: package.json
honojs/src/: index.ts
http-servers/python/fastapi/: Dockerfile  pyproject.toml
http-servers/python/fastapi/src/: handlers.py  main.py
http-servers/python/fastapi/src/config/: env.py
http-servers/python/fastapi/src/consts/: errors.py
http-servers/python/fastapi/src/database/: cassandra.py  mongodb.py  postgres.py  redis_repo.py  repository.py  types.py
http-servers/python/fastapi/src/routes/: db.py  params.py
infra/compose/: databases.yml  grafana.yml
infra/docker/: databases.yml  grafana.yml
node-express/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
node-express/src/: app.ts  env.ts  index.ts
node-fastify/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
node-fastify/src/: app.ts  env.ts  index.ts
node-nestjs/: Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
node-nestjs/src/: app.controller.ts  app.module.ts  env.ts  main.ts
python-fastapi/: pyproject.toml
python-fastapi/src/: env.py  handlers.py  main.py
python-fastapi/src/config/: env.py
python-fastapi/src/consts/: errors.py
python-fastapi/src/routes/: params.py
scripts/: biome-sync-check.mts  calibrate.mts  check-config.mts  clean.mts  contract.mts  dev.mts  format.mts  golangci-sync-check.mts  images.mts  install.mts  lib.mts  lint.mts  remove-images.mts  update.mts  verify.mts
servers/go-chi/: .env.example  .golangci.json  Dockerfile  bench.json  go.mod  go.sum
servers/go-echo/: .env.example  .golangci.json  Dockerfile  bench.json  go.mod  go.sum
servers/go-fiber/: .env.example  .golangci.json  Dockerfile  bench.json  go.mod  go.sum
servers/go-gin/: .dockerignore  .env.example  .golangci.json  Dockerfile  bench.json  go.mod  go.sum
servers/go-stdlib/: .env.example  .golangci.json  Dockerfile  bench.json  go.mod  go.sum
servers/kt-ktor/: .env.example  Dockerfile  bench.json  build.gradle.kts
servers/kt-spring-boot/: .env.example  Dockerfile  bench.json  build.gradle.kts
servers/py-django/: .env.example  Dockerfile  README.md  bench.json  pyproject.toml
servers/py-django/src/: asgi.py  main.py  middleware.py  settings.py  urls.py
servers/py-django/src/api/: models.py
servers/py-django/src/api/repositories/: base.py  cassandra.py  mongo.py  postgres.py  redis_cache.py
servers/py-django/src/api/templates/: page.html
servers/py-django/src/api/views/: basic.py  db.py  params.py  web.py
servers/py-fastapi/: .dockerignore  .env.example  Dockerfile  bench.json  pyproject.toml
servers/py-fastapi/src/: handlers.py  main.py
servers/py-fastapi/src/consts/: defaults.py  errors.py
servers/py-fastapi/src/database/: cassandra.py  mongodb.py  postgres.py  redis_repo.py  repository.py
servers/py-fastapi/src/routes/: db.py  params.py  web.py
servers/py-flask/: .env.example  Dockerfile  README.md  bench.json  gunicorn.conf.py  pyproject.toml
servers/py-flask/src/: app.py  consts.py  main.py  responses.py  validation.py
servers/py-flask/src/blueprints/: basic.py  db.py  params.py  web.py
servers/py-flask/src/repositories/: base.py  cassandra.py  mongo.py  postgres.py  redis_repo.py
servers/rs-actix/: .env.example  Cargo.toml  Dockerfile  bench.json
servers/rs-actix/src/: error.rs  main.rs  state.rs
servers/rs-actix/src/routes/: db.rs  mod.rs  params.rs  web.rs
servers/rs-axum/: .env.example  Cargo.toml  Dockerfile  bench.json
servers/rs-axum/src/: error.rs  main.rs  state.rs
servers/rs-axum/src/routes/: db.rs  mod.rs  params.rs  web.rs
servers/ts-bun-elysia/: .env.example  Dockerfile  bench.json  package.json  tsconfig.json
servers/ts-bun-honojs/: .dockerignore  .env.example  Dockerfile  bench.json  package.json
servers/ts-deno-honojs/: .env.example  Dockerfile  bench.json  deno.json  package.json
servers/ts-deno-oak/: .env.example  Dockerfile  bench.json  deno.json  package.json
servers/ts-express/: .env.example  Dockerfile  bench.json  package.json
servers/ts-fastify/: .env.example  Dockerfile  bench.json  package.json
shared/python/: .gitkeep  pyproject.toml
shared/python/src/bench_shared/: env.py  errors.py  web.py
shared/python/src/bench_shared/repositories/: __init__.py  cassandra.py  mongo.py
shared/rust/: .gitkeep  Cargo.toml
shared/rust/src/: consts.rs  env.rs  error.rs  lib.rs  model.rs  web.rs
shared/rust/src/db/: cassandra.rs  mod.rs  mongodb.rs  postgres.rs  redis.rs
(+511 files in other folders)
