[project]
name = "fastapi-server"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "ruff==0.14.14",
    "uvicorn>=0.40.0",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
