[package]
name = "shared"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
mongodb = "3.7.0"
redis = { version = "1.3.0", default-features = false, features = ["tokio-comp", "connection-manager"] }
scylla = "1.7.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "macros"] }
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = ["v7"] }
validator = { version = "0.20.0", features = ["derive"] }

# Strictness floor for new Rust code (repo canon, task #21): clippy pedantic is
# the baseline, then noise is subtracted BY NAME with a rationale. `just verify`
# runs `cargo clippy -- -D warnings`, which promotes every remaining warn to a
# hard error. Duplicated verbatim in servers/rs-axum/Cargo.toml (no cargo
# workspace — PLAN §3 uses path deps, so each crate carries its own lint table).
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# The db module names (db::redis::RedisRepo, db::postgres::PostgresRepo) repeat
# their module — renaming to satisfy the lint would read worse, not better.
module_name_repetitions = "allow"
# Infra crate consumed only by our own servers, not a published API: rustdoc
# `# Errors`/`# Panics`/`# Must use` sections would be ceremony with no reader.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
# The cassandra `SessionBuilder::build` future is large (~31 KB), but it is
# awaited exactly once at startup — boxing a one-shot connect future only adds a
# heap allocation with no hot-path benefit.
large_futures = "allow"
