[project]
name = "fastapi-server"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.30.0",
    "email-validator>=2.0.0",
    "fastapi>=0.128.0",
    "motor>=3.7.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "redis[hiredis]>=6.0.0",
    "scylla-driver>=3.26.6",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn>=0.40.0",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.400",
    "ruff>=0.14.14",
]

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.format]
quote-style = "double"
